--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,7 +8,7 @@ html,body{
 margin:0;
 padding:0;
 font-family: 'Lato', sans-serif;
-background: #fff url(../images/bg.jpg) center top no-repeat;
+background: #230d0d url(//d34ymitoc1pg7m.cloudfront.net/bf4/backgrounds/bg-video-overlay-dcc29baf.jpg) 50% 0 no-repeat;
 }
 
 
